fixing privacy policy colours in dark mode

--- a/css/extra/_misc.scss
+++ b/css/extra/_misc.scss
@@ -70,6 +70,9 @@
         font-size:150%;
         margin-top: 0.5em;
     }
+    p{
+        color: black !important;
+    }
 }
 
 
